--- a/OPC_PLC Project/Simple VB .NET OPC Example.vbproj
+++ b/OPC_PLC Project/Simple VB .NET OPC Example.vbproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{20E13EAF-679E-4835-A937-7C6553F461A1}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon />
+    <ApplicationIcon>MMan.ico</ApplicationIcon>
     <AssemblyKeyContainerName />
-    <AssemblyName>Simple VS2010 VB .NET OPC Example</AssemblyName>
+    <AssemblyName>Simple OPC Example</AssemblyName>
     <AssemblyOriginatorKeyFile />
     <AssemblyOriginatorKeyMode>None</AssemblyOriginatorKeyMode>
     <DefaultClientScript>JScript</DefaultClientScript>
@@ -46,7 +46,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\</OutputPath>
-    <DocumentationFile>Simple VS2010 VB .NET OPC Example.xml</DocumentationFile>
+    <DocumentationFile>Simple OPC Example.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile />
     <DefineConstants />
@@ -64,7 +64,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\</OutputPath>
-    <DocumentationFile>Simple VS2010 VB .NET OPC Example.xml</DocumentationFile>
+    <DocumentationFile>Simple OPC Example.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile />
     <DefineConstants />
@@ -159,7 +159,9 @@
       <DependentUpon>Splash.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="MMan.ico" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
