--- a/OPC_PLC Project/Simple VB .NET OPC Example.vbproj
+++ b/OPC_PLC Project/Simple VB .NET OPC Example.vbproj
@@ -81,13 +81,11 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <COMReference Include="OPCAutomation">
-      <Guid>{28E68F91-8D75-11D1-8DC3-3C302A000000}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-    </COMReference>
+    <Reference Include="Interop.OPCAutomation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\..\Dropbox\VB.NET Projects\OPC_PLC Project\obj\Debug\Interop.OPCAutomation.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
